# UMAT-ABAQUS_library

./: .gitignore  Makefile  README.md  generate.py  locate_inps.sh  pyproject.toml  umat_hmm.for  validate.py
biofilaments/10_contractile_network_ai/: build_cn_ai.sh  cn_ai  cn_ai.f90  global.mod  umat_cn_ai.f90
biofilaments/1_affine_network/: an  an.f90  build_an.sh  run_code.sh  umat_an.for
biofilaments/2_affine_network_ai/: an_ai  an_ai.f90  build_an_ai.sh  global.mod  umat_an_ai.f90
biofilaments/3_nonaffine_network/: build_nan.sh  nan  nan.f90  umat_nan.for
biofilaments/4_nonaffine_network_ai/: build_nan_ai.sh  global.mod  nan_ai  nan_ai.f90  umat_nan_ai.f90
biofilaments/5_affine_network_linkers/: anl  anl.f90  build_anl.sh  umat_anl.for
biofilaments/6_affine_network_linkers_ai/: anl.f90  anl_ai  anl_ai.f90  build_anl.sh  build_anl_ai.sh  global.mod  umat_anl.f90  (+1 more)
cyclic/: absoft_run_env.sh  compile_cyclic.sh  cyclic  cyclic.atools  cyclic.eps  cyclic.f90  cyclic_amp.eps  cyclic_for_atools.fx3  cyclic_freq.eps  data_cyclic.plt  data_cyclicamp.plt  data_uniaxial.plt  makefile.amake  makefile.amake.bk  run_cyclic.sh  stress_cuniaxial.out  umat_gho.for
docs/: config_guide.md
monotonic/: data_monotonic.plt  monotonic  monotonic.eps  monotonic.f90  param_umat.inc  run_monotonic.sh  umat_gho.for
src/: Makefile  PROPS_REFERENCE.md  mod_anisotropic.f90  mod_constants.f90  mod_continuum.f90  mod_damage.f90  mod_hyperelastic.f90  mod_icosahedron.f90  mod_kinematics.f90  mod_network.f90  mod_tensor.f90  mod_viscosity.f90  uexternaldb.f90  umat_builder.f90
(+1583 files in other folders)
