[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "umat-abaqus-library"
version = "0.1.0"
description = "Generator for self-contained ABAQUS UMAT material law directories"
requires-python = ">=3.8"
license = "MIT"

[project.scripts]
umat-generate = "generate:main"
